# lemon-ffmpeg-rust

./: .gitignore  Cargo.toml  README.md  build.rs  codegen.sh  headers.h  headers_missing.h
cbits/: defs.c
src/: extra.rs  lib.rs  sys.rs
src/extra/: defs.rs
